--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             style="width: calc(100% - 30px); z-index: 999"
           >
             <div class="navbar-nav w-100">
-              <div class="nav-item dropdown dropright">
+              <!-- <div class="nav-item dropdown dropright">
                 <a
                   href="#"
                   class="nav-link dropdown-toggle"
@@ -107,8 +107,8 @@
                   <a href="" class="dropdown-item">Women's Dresses</a>
                   <a href="" class="dropdown-item">Baby's Dresses</a>
                 </div>
-              </div>
-              <a href="" class="nav-item nav-link">Shirts</a>
+              </div> -->
+              <!-- <a href="" class="nav-item nav-link">Shirts</a>
               <a href="" class="nav-item nav-link">Jeans</a>
               <a href="" class="nav-item nav-link">Swimwear</a>
               <a href="" class="nav-item nav-link">Sleepwear</a>
@@ -116,7 +116,7 @@
               <a href="" class="nav-item nav-link">Jumpsuits</a>
               <a href="" class="nav-item nav-link">Blazers</a>
               <a href="" class="nav-item nav-link">Jackets</a>
-              <a href="" class="nav-item nav-link">Shoes</a>
+              <a href="" class="nav-item nav-link">Shoes</a> -->
             </div>
           </nav>
         </div>
@@ -580,5 +580,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script type="module" src="js/index/home_page.js"></script>
   </body>
 </html>
