check product class

--- a/shop.html
+++ b/shop.html
@@ -637,6 +637,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/index/shop.js" type="module"></script>
 </body>
 
 </html>
