--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
         <span class="bg-secondary pr-3">Featured Products</span>
       </h2>
-      <div class="row px-xl-5">
+      <div class="row px-xl-5" id="featured-products">
         <!-- featured products goes here -->
       </div>
     </div>
@@ -406,7 +406,7 @@
       <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
         <span class="bg-secondary pr-3">Recent Products</span>
       </h2>
-      <div class="row px-xl-5">
+      <div class="row px-xl-5" id="recent-products">
         <!-- recent products goes here -->
       </div>
     </div>
