--- a/shop.html
+++ b/shop.html
@@ -166,7 +166,7 @@
                 <!-- Price Start -->
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by price</span></h5>
                 <div class="bg-light p-4 mb-30">
-                    <form>
+                    <form>  
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" name="price" value="all" class="custom-control-input" checked id="price-all">
                             <label class="custom-control-label" for="price-all">All Price</label>
@@ -191,6 +191,9 @@
                             <input type="checkbox" name="price" value="400" class="custom-control-input" id="price-5">
                             <label class="custom-control-label" for="price-5">$400 - $500</label>
                         </div>
+                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
+                           <button id="priceForm" class="btn btn-primary my-2" >Filter</button>
+                        </div>
                     </form>
                 </div>
                 <!-- Price End -->
@@ -201,7 +204,7 @@
                     <form>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" name="color" value="all" class="custom-control-input" checked id="color-all">
-                            <label class="custom-control-label" for="price-all">All Color</label>
+                            <label class="custom-control-label" for="color-all">All Color</label>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" name="color" value="black" class="custom-control-input" id="color-1">
@@ -223,10 +226,12 @@
                             <input type="checkbox" name="color" value="green" class="custom-control-input" id="color-5">
                             <label class="custom-control-label" for="color-5">Green</label>
                         </div>
+                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
+                            <button id="colorForm" class="btn btn-primary my-2" >Filter</button>
+                         </div>
                     </form>
                 </div>
                 <!-- Color End -->
-
                 <!-- Size Start -->
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by size</span></h5>
                 <div class="bg-light p-4 mb-30">
@@ -255,6 +260,9 @@
                             <input type="checkbox" name="size" value="xl" class="custom-control-input" id="size-5">
                             <label class="custom-control-label" for="size-5">XL</label>
                         </div>
+                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
+                            <button id="sizeForm" class="btn btn-primary my-2" >Filter</button>
+                         </div>
                     </form>
                 </div>
                 <!-- Size End -->
@@ -275,9 +283,9 @@
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">Sorting</button>
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#">Price</a>
-                                        <a class="dropdown-item" href="#">Popularity</a>
-                                        <a class="dropdown-item" href="#">Best Rating</a>
+                                        <a class="dropdown-item" id="sortPrice" >Price</a>
+                                        <a class="dropdown-item" id="sortPopularity" >Popularity</a>
+                                        <a class="dropdown-item" id="sortRating" >Best Rating</a>
                                     </div>
                                 </div>
                                 <div class="btn-group ml-2">
