--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
                 <a href="" class="btn px-0">
                   <i class="fas fa-heart text-primary"></i>
-                  <span
+                  <span id = "love-counter"
                     class="badge text-secondary border border-secondary rounded-circle"
                     style="padding-bottom: 2px"
                     >0</span
@@ -160,7 +160,7 @@
                 </a>
                 <a href="" class="btn px-0 ml-3">
                   <i class="fas fa-shopping-cart text-primary"></i>
-                  <span
+                  <span id = "cart-counter"
                     class="badge text-secondary border border-secondary rounded-circle"
                     style="padding-bottom: 2px"
                     >0</span
