--- a/shop.html
+++ b/shop.html
@@ -291,9 +291,11 @@
                                 <div class="btn-group ml-2">
                                     <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">Showing</button>
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#">9</a>
-                                        <a class="dropdown-item" href="#">18</a>
-                                        <a class="dropdown-item" href="#">27</a>
+                                        <a class="dropdown-item" id="show1">3</a>
+                                        <a class="dropdown-item" id="show2">5</a>
+                                        <a class="dropdown-item" id="show3">9</a>
+                                        <a class="dropdown-item" id="show4">18</a>
+                                        <a class="dropdown-item" id="show5">27</a>
                                     </div>
                                 </div>
                             </div>
@@ -333,12 +335,12 @@
 
                     <div class="col-12">
                         <nav>
-                          <ul class="pagination justify-content-center">
-                            <li class="page-item disabled"><a class="page-link" href="#">Previous</span></a></li>
+                          <ul class="pagination justify-content-center" id="paginationContainer">
+                            <!-- <li class="page-item disabled"><a class="page-link" href="#">Previous</span></a></li>
                             <li class="page-item active"><a class="page-link" href="#">1</a></li>
                             <li class="page-item"><a class="page-link" href="#">2</a></li>
                             <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
                           </ul>
                         </nav>
                     </div>
