--- a/register.html
+++ b/register.html
@@ -2,62 +2,224 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi Shop | register Page</title>
-    <link rel="stylesheet" href="CSSS/main.css">
-    <link rel="stylesheet" href="CSSS/Login.css">
-    <link rel="stylesheet" href="CSSS/register.css">
-    <link rel="stylesheet" href="CSSS/all.min.css">
-    <link rel="stylesheet" href="CSSS/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/2f2dd22c7b.js" crossorigin="anonymous"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Archivo:wght@300&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Register</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">  
+
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <header>
-        <div class="left-sec">
-            <a href="index.html">
-                <span class="m">MULTI</span><span class="s">SHOP</span>
-            </a>
+        <!-- Topbar Start -->
+        <div class="container-fluid">
+            <div class="row bg-secondary py-1 px-xl-5">
+                <div class="col-lg-6 d-none d-lg-block">
+                    <div class="d-inline-flex align-items-center h-100">
+                        <a class="text-body mr-3" href="">About</a>
+                        <a class="text-body mr-3" href="">Contact</a>
+                        <a class="text-body mr-3" href="">Help</a>
+                        <a class="text-body mr-3" href="">FAQs</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center text-lg-right">
+                    <div class="d-inline-flex align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">My Account</button>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <button class="dropdown-item" type="button">Sign in</button>
+                                <button class="dropdown-item" type="button">Sign up</button>
+                            </div>
+                        </div>
+                        <div class="btn-group mx-2">
+                            <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">USD</button>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <button class="dropdown-item" type="button">EUR</button>
+                                <button class="dropdown-item" type="button">GBP</button>
+                                <button class="dropdown-item" type="button">CAD</button>
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">EN</button>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <button class="dropdown-item" type="button">FR</button>
+                                <button class="dropdown-item" type="button">AR</button>
+                                <button class="dropdown-item" type="button">RU</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-inline-flex align-items-center d-block d-lg-none">
+                        <a href="" class="btn px-0 ml-2">
+                            <i class="fas fa-heart text-dark"></i>
+                            <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
+                        </a>
+                        <a href="" class="btn px-0 ml-2">
+                            <i class="fas fa-shopping-cart text-dark"></i>
+                            <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center bg-light py-3 px-xl-5 d-none d-lg-flex">
+                <div class="col-lg-4">
+                    <a href="" class="text-decoration-none">
+                        <span class="h1 text-uppercase text-primary bg-dark px-2">Multi</span>
+                        <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1">Shop</span>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-6 text-left">
+                    <form action="">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search for products">
+                            <div class="input-group-append">
+                                <span class="input-group-text bg-transparent text-primary">
+                                    <i class="fa fa-search"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-lg-4 col-6 text-right">
+                    <p class="m-0">Customer Service</p>
+                    <h5 class="m-0">+012 345 6789</h5>
+                </div>
+            </div>
         </div>
-        <div class="right-sec">
-            <li><a href="login.html">Sign in</a></li>
-            <li><a href="register.html">Sign up</a></li>
+        <!-- Topbar End -->
+    
+    <div class="container pt-4">
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-6 shadow p-4 mb-5 bg-white rounded">
+                <form>
+                    <div class="form-group">
+                      <label for="firstName">First Name</label>
+                      <input type="text" class="form-control" placeholder="Enter First Name..." id="firstName" aria-describedby="emailHelp">
+                      <small id="firstNameError" class="form-text text-danger "></small>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" class="form-control" placeholder="Enter Last Name..." id="lastName" aria-describedby="emailHelp">
+                        <small id="lastNameError" class="form-text text-danger "></small>
+                      </div>
+                      <div class="form-group">
+                        <label for="Email">Email address</label>
+                        <input type="email" class="form-control" placeholder="Enter Email..." id="Email" aria-describedby="emailHelp">
+                        <small id="emailError" class="form-text text-danger "></small>
+                      </div>
+                    <div class="form-group">
+                      <label for="passWord">Password</label>
+                      <input type="password" placeholder="Enter Password..." class="form-control" id="passWord">
+                      <small id="passError" class="form-text text-danger"></small>
+                    </div>
+                    <button type="submit" id="sup" class="btn btn-primary">Register</button>
+                  </form>
+            </div>
         </div>
-    </header>
-    <section class="section-form">
-        <h2>Sign Up..</h2>
-        <form action="">
-            <input type="text" placeholder="Enter firstName.." class="User" id="firstName">
-            <p id="firstNameError"></p>
-            <input type="text" placeholder="Enter lastName.." class="User" id="lastName">
-            <p id="lastNameError"></p>
-            <input type="email" placeholder="Enter E-mail.." class="mail" id="Email">
-            <p id="emailError"></p>
-            <input type="password" placeholder="Enter Password.." class="Pass" id="passWord">
-            <p id="passError"></p>
-            <span id="toggleBtn"><i class="fa-solid fa-eye" id="eye"></i></span>
-            <input type="submit" value="Sign Up" class="Sin" id="sup">
-        </form>
-        <!-- <div class="validation">
-            <ul>
-                <li id="lower">At least one lowercase charachter</li>
-                <li id="upper">At least one uppercase charachter</li>
-                <li id="number">At least one number</li>
-                <li id="special">At least one special charachter</li>
-                <li id="length">At least 8 charachters</li>
-            </ul>
-        </div> -->
-    </section>
+    </div>
 
 
+
+
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-secondary mt-5 pt-5">
+        <div class="row px-xl-5 pt-5">
+            <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
+                <h5 class="text-secondary text-uppercase mb-4">Get In Touch</h5>
+                <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor. Rebum tempor no vero est magna amet no</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York, USA</p>
+                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
+            </div>
+            <div class="col-lg-8 col-md-12">
+                <div class="row">
+                    <div class="col-md-4 mb-5">
+                        <h5 class="text-secondary text-uppercase mb-4">Quick Shop</h5>
+                        <div class="d-flex flex-column justify-content-start">
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                            <a class="text-secondary" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-5">
+                        <h5 class="text-secondary text-uppercase mb-4">My Account</h5>
+                        <div class="d-flex flex-column justify-content-start">
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
+                            <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
+                            <a class="text-secondary" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-5">
+                        <h5 class="text-secondary text-uppercase mb-4">Newsletter</h5>
+                        <p>Duo stet tempor ipsum sit amet magna ipsum tempor est</p>
+                        <form action="">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Your Email Address">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary">Sign Up</button>
+                                </div>
+                            </div>
+                        </form>
+                        <h6 class="text-secondary text-uppercase mt-4 mb-3">Follow Us</h6>
+                        <div class="d-flex">
+                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
+            <div class="col-md-6 px-xl-0">
+                <p class="mb-md-0 text-center text-md-left text-secondary">
+                    &copy; <a class="text-primary" href="#">Domain</a>. All Rights Reserved. Designed
+                    by
+                    <a class="text-primary" href="https://htmlcodex.com">HTML Codex</a>
+                </p>
+            </div>
+            <div class="col-md-6 px-xl-0 text-center text-md-right">
+                <img class="img-fluid" src="img/payments.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
     <script src="js/access/register.js" type="module"></script>
 </body>
 
