--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     >0</span
                   >
                 </a>
-                <a href="" class="btn px-0 ml-3">
+                <a href="cart.html" class="btn px-0 ml-3">
                   <i class="fas fa-shopping-cart text-primary"></i>
                   <span id = "cart-counter"
                     class="badge text-secondary border border-secondary rounded-circle"
