--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a href="shop.html" class="nav-item nav-link">Shop</a>
                 <a href="checkout.html" class="nav-item nav-link">Checkout</a>
               </div>
-              <div class="navbar-nav ml-auto py-0 d-none d-lg-block">
+              <div class="navbar-nav  py-0 d-none d-lg-flex justify-content-between align-items-center">
                 <a href="" class="btn px-0">
                   <i class="fas fa-heart text-primary"></i>
                   <span id = "love-counter"
@@ -166,7 +166,14 @@
                     >0</span
                   >
                 </a>
+                <div class=" navbar-nav ml-auto nav-link">
+                  <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">My Account</button>
+                  <div class="dropdown-menu dropdown-menu-right " id="access" >
+                    
+                  </div>
               </div>
+              </div>
+           
             </div>
           </nav>
         </div>
